# package-integrity-classification-via-sim-to-real

./: .gitignore  BUILD_LOG.md  CITADEL_TASKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  WALKTHROUGH.md  requirements.txt  run_audit.sh  todo-rename-files-to-lowercase.md
.github/workflows/: ci.yml
analytics/: monte_carlo_confidence_analysis.py
audit_workspace/: audit_report.md
phase-1-asset-and-scene-creation/scripts/: create-pristine-box.py  crush-box.py  deform-box.py
phase-2-synthetic-data-generation/scripts/: generate-synthetic-data.py
phase-3-model-training/config/: dataset.yaml
phase-3-model-training/scripts/: train.py
phase-4-deployment-and-inference/ros-packages/package_integrity_inference/: package.xml  setup.cfg  setup.py
phase-4-deployment-and-inference/ros-packages/package_integrity_inference/launch/: inference.launch.py
phase-4-deployment-and-inference/ros-packages/package_integrity_inference/package_integrity_inference/: yolo_inference_node.py
